# riow

./: Cargo.toml  README.md
src/: camera.rs  hit.rs  lib.rs  ray.rs  sphere.rs  vec3.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
