[package]
name = "raytracing"
version = "0.1.0"
authors = ["Brian Lewis <keller@csh.rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
path = "src/lib.rs"

[[bin]]
name = "ch-01"
path = "src/bin/ch_01.rs"

[[bin]]
name = "ch-02"
path = "src/bin/ch_02.rs"

[[bin]]
name = "ch-03"
path = "src/bin/ch_03.rs"

[[bin]]
name = "ch-04"
path = "src/bin/ch_04.rs"

[[bin]]
name = "ch-05"
path = "src/bin/ch_05.rs"

